# HighTide

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  README.md  WORKSPACE  defs.bzl  index.html  results.html  runorfs.sh  settings.mk  setup.sh
.claude/skills/find-designs/: SKILL.md
.claude/skills/new-design/: SKILL.md
.github/workflows/: audit-updates.yml  claude.yml  find-designs.yml  require-design-files.yml
designs/: BUILD.bazel
designs/asap7/NVDLA/partition_a/: config.mk  constraint.sdc
designs/asap7/NVDLA/partition_c/: config.mk  constraint.sdc
designs/asap7/NVDLA/partition_m/: config.mk  constraint.sdc
designs/asap7/NVDLA/partition_o/: config.mk  constraint.sdc
designs/asap7/NVDLA/partition_p/: config.mk  constraint.sdc
designs/asap7/NyuziProcessor/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/bp_processor/: BUILD.bazel
designs/asap7/bp_processor/bp_quad/: BUILD.bazel  constraint.sdc
designs/asap7/bp_processor/sram/lef/: fakeram_128x8_1rw.lef  fakeram_32x48_1rw.lef  fakeram_32x66_1rw.lef  fakeram_512x64_1rw.lef  fakeram_512x8_1rw.lef  fakeram_64x184_1rw.lef  fakeram_64x50_1rw.lef  fakeram_8x174_1rw.lef
designs/asap7/bp_processor/sram/lib/: fakeram_128x8_1rw.lib  fakeram_32x48_1rw.lib  fakeram_32x66_1rw.lib  fakeram_512x64_1rw.lib  fakeram_512x8_1rw.lib  fakeram_64x184_1rw.lib  fakeram_64x50_1rw.lib  fakeram_8x174_1rw.lib
designs/asap7/cnn/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/coralnpu/: config.mk  constraint.sdc  fastroute.tcl
designs/asap7/coralnpu/sram/lef/: fakeram_595x8_1r1w.lef  fakeram_633x8_1r1w.lef
designs/asap7/coralnpu/sram/lib/: fakeram_595x8_1r1w.lib  fakeram_633x8_1r1w.lib
designs/asap7/floonoc/: config.mk  constraint.sdc
designs/asap7/gemmini/: BUILD.bazel  config.mk  constraint.sdc  io.tcl  pdn.tcl
designs/asap7/lfsr/: BUILD.bazel  config.mk
designs/asap7/lfsr_prbs_gen/: BUILD.bazel
designs/asap7/liteeth/: BUILD.bazel
designs/asap7/liteeth/liteeth_mac_axi_mii/: BUILD.bazel  config.mk
designs/asap7/liteeth/liteeth_mac_wb_mii/: BUILD.bazel  config.mk
designs/asap7/liteeth/liteeth_udp_raw_rgmii/: BUILD.bazel  config.mk
designs/asap7/liteeth/liteeth_udp_stream_rgmii/: BUILD.bazel  config.mk
designs/asap7/liteeth/liteeth_udp_stream_sgmii/: BUILD.bazel  config.mk
designs/asap7/liteeth/liteeth_udp_usp_gth_sgmii/: BUILD.bazel  config.mk
designs/asap7/liteeth/sram/lib/: fakeram_1rw1r_32w384d_8wm_sram.lib
designs/asap7/minimax/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/sha3/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/vortex/: config.mk  constraint.sdc
designs/nangate45/NyuziProcessor/: BUILD.bazel  config.mk  constraint.sdc  fastroute.tcl
designs/nangate45/NyuziProcessor/sram/lef/: fakeram_16x52_1r1w.lef  fakeram_18x256_1r1w.lef  fakeram_1x256_1r1w.lef  fakeram_20x64_1r1w.lef  fakeram_20x64_2r1w.lef  fakeram_32x128_2r1w.lef  fakeram_3x64_1r1w.lef  fakeram_512x2048_1r1w.lef  fakeram_512x256_1r1w.lef  fakeram_7x256_1r1w.lef
designs/nangate45/NyuziProcessor/sram/lib/: fakeram_16x52_1r1w.lib  (+9 more)
designs/nangate45/lfsr/: BUILD.bazel  config.mk
designs/nangate45/lfsr_prbs_gen/: BUILD.bazel
designs/nangate45/liteeth/: BUILD.bazel
designs/nangate45/liteeth/liteeth_mac_axi_mii/: BUILD.bazel  config.mk
designs/nangate45/liteeth/liteeth_mac_wb_mii/: BUILD.bazel  config.mk
designs/nangate45/liteeth/liteeth_udp_raw_rgmii/: BUILD.bazel  config.mk
designs/nangate45/liteeth/liteeth_udp_stream_rgmii/: BUILD.bazel  config.mk
designs/nangate45/liteeth/liteeth_udp_stream_sgmii/: BUILD.bazel  config.mk
designs/nangate45/liteeth/liteeth_udp_usp_gth_sgmii/: BUILD.bazel  config.mk
designs/nangate45/minimax/: BUILD.bazel
designs/sky130hd/lfsr/: BUILD.bazel  config.mk
designs/sky130hd/lfsr_prbs_gen/: BUILD.bazel
designs/sky130hd/liteeth/: BUILD.bazel
designs/sky130hd/liteeth/liteeth_mac_axi_mii/: BUILD.bazel  config.mk
designs/sky130hd/liteeth/liteeth_mac_wb_mii/: BUILD.bazel  config.mk
designs/sky130hd/liteeth/liteeth_udp_raw_rgmii/: BUILD.bazel  config.mk
designs/sky130hd/liteeth/liteeth_udp_stream_rgmii/: BUILD.bazel  config.mk
designs/sky130hd/liteeth/liteeth_udp_stream_sgmii/: BUILD.bazel  config.mk
designs/sky130hd/liteeth/liteeth_udp_usp_gth_sgmii/: BUILD.bazel  config.mk
designs/sky130hd/minimax/: BUILD.bazel
designs/src/: BUILD.bazel
designs/src/NVDLA/: verilog.mk
designs/src/NVDLA/dev/: setup.sh  setup_gcc493.sh  setup_jdk1_7.sh  setup_perl_modules.sh  tree.make
designs/src/NyuziProcessor/: BUILD.bazel  verilog.mk
designs/src/NyuziProcessor/dev/: setup.sh
designs/src/bp_processor/: BUILD.bazel  verilog.mk
designs/src/bp_processor/dev/: gen_fakeram.py  patch_mem.py  setup.sh
designs/src/cnn/: BUILD.bazel  verilog.mk
designs/src/cnn/dev/: generate_cnn_verilog.sh  requirements.txt  setup.sh
designs/src/cnn/dev/cnn/: cnn.v
designs/src/coralnpu/: CoreMiniAxi.v
designs/src/coralnpu/dev/: setup.sh
designs/src/floonoc/dev/: mesh_config.yml  setup.sh
designs/src/gemmini/: BUILD.bazel  gemmini.v  verilog.mk
designs/src/gemmini/dev/: setup.sh
designs/src/gemmini/dev/src/main/scala/gemmini/: GemminiMeshTop.scala
designs/src/lfsr/: BUILD.bazel  verilog.mk
designs/src/lfsr_prbs_gen/: BUILD.bazel
designs/src/lfsr_prbs_gen/dev/: setup.sh
designs/src/liteeth/: BUILD.bazel  gen.sh  liteeth_mac_axi_mii.v  liteeth_mac_wb_mii.v  liteeth_udp_raw_rgmii.v  liteeth_udp_stream_rgmii.v  liteeth_udp_stream_sgmii.v  liteeth_udp_usp_gth_sgmii.v  macros.v  verilog.mk
designs/src/liteeth/dev/: setup.sh
designs/src/minimax/: BUILD.bazel  verilog.mk
designs/src/minimax/dev/: setup.sh
designs/src/sha3/: BUILD.bazel  sha3.v  verilog.mk
designs/src/sha3/dev/: build.sbt  setup.sh
designs/src/sha3/dev/src/main/scala/sha3/: DpathModule.scala  Sha3Top.scala
designs/src/vortex/: verilog.mk
designs/src/vortex/dev/: VX_fpu_div_REPLACE.sv  VX_fpu_fma_REPLACE.sv  VX_fpu_sqrt_REPLACE.sv  VX_sp_ram_REPLACE.sv  setup.sh
docs/: CLAUDE.md  updatedesign.md
tools/: summary.sh  update_rtl.sh
(+10 files in other folders)
