load("@bazel-orfs//:openroad.bzl", "orfs_pdk")

# Config setting for dev RTL generation mode.
# Usage: bazel build --define dev=true //designs/...
config_setting(
    name = "dev",
    define_values = {"dev": "true"},
    visibility = ["//visibility:public"],
)

# nangate45 PDK definition (not included in ORFS's default Bazel targets).
# References platform files extracted from the ORFS Docker image.
# NOTE: nangate45 is not shipped with bazel-orfs by default. This may need
# adjustment once we verify the docker_orfs repo structure for nangate45.
orfs_pdk(
    name = "nangate45",
    config = "@docker_orfs//:flow/platforms/nangate45/config.mk",
    visibility = ["//visibility:public"],
)
