load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "lfsr",
    top = "lfsr_prbs_gen",
    platform = "sky130hd",
    verilog_files = ["//designs/src/lfsr:rtl"],
    sources = {"SDC_FILE": [":constraint.sdc"]},
    arguments = {
        "CORE_UTILIZATION": "40",
        "TNS_END_PERCENT": "100",
    },
)
