load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "lfsr_prbs_gen",
    platform = "sky130hd",
    verilog_files = ["//designs/src/lfsr_prbs_gen:rtl"],
    sources = {"SDC_FILE": [":constraint.sdc"]},
    arguments = {
        "CORE_UTILIZATION": "40",
        "TNS_END_PERCENT": "100",
    },
)
