filegroup(
    name = "rtl_release",
    srcs = ["gemmini.v"],
)

# Dev mode: generate Gemmini RTL via Chisel/sbt.
# Requires: git submodule update --init designs/src/gemmini/dev/repo
#           sbt (Scala build tool) must be on PATH
genrule(
    name = "rtl_dev_gen",
    srcs = glob(["dev/**"]),
    outs = ["dev/generated/gemmini.v"],
    cmd = "cd $$(dirname $(location dev/setup.sh)) && bash setup.sh",
    tools = ["dev/setup.sh"],
)

alias(
    name = "rtl",
    actual = select({
        "//:dev": ":rtl_dev_gen",
        "//conditions:default": ":rtl_release",
    }),
    visibility = ["//visibility:public"],
)
