filegroup(
    name = "rtl_release",
    srcs = ["minimax.v"],
)

# update-rtl mode: init submodule + convert SystemVerilog via sv2v.
genrule(
    name = "rtl_dev_gen",
    srcs = [],
    outs = ["minimax_gen.v"],
    local = True,
    cmd = """
        WORKSPACE_ROOT=$$(readlink -f $(location //:tools/update_rtl.sh) | sed 's|/tools/update_rtl.sh||')
        cd $$WORKSPACE_ROOT
        git submodule update --init designs/src/minimax/dev/repo >&2
        designs/src/minimax/dev/sv2v -w $$OLDPWD/$(OUTS) designs/src/minimax/dev/repo/rtl/minimax.v
    """,
    tools = ["//:tools/update_rtl.sh"],
)

alias(
    name = "rtl",
    actual = select({
        "//:update_rtl": ":rtl_dev_gen",
        "//conditions:default": ":rtl_release",
    }),
    visibility = ["//visibility:public"],
)
