# sha3 has no pre-generated release RTL.
# Dev mode generates it via setup.sh (requires sbt on PATH).
# To create release RTL: run dev flow, then copy dev/generated/sha3.v here.

filegroup(
    name = "rtl_release",
    srcs = glob(["sha3.v"]),
)

# Dev mode: generate SHA3 RTL via Chisel/sbt.
# Requires: git submodule update --init designs/src/sha3/dev/repo
genrule(
    name = "rtl_dev_gen",
    srcs = glob(["dev/**"]),
    outs = ["dev/generated/sha3.v"],
    cmd = "cd $$(dirname $(location dev/setup.sh)) && bash setup.sh",
    tools = ["dev/setup.sh"],
)

alias(
    name = "rtl",
    actual = select({
        "//:update_rtl": ":rtl_dev_gen",
        "//conditions:default": ":rtl_release",
    }),
    visibility = ["//visibility:public"],
)
