load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "liteeth_udp_stream_sgmii",
    platform = "asap7",
    verilog_files = ["//designs/src/liteeth:liteeth_udp_stream_sgmii_rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": ["//designs/asap7/liteeth:sram_lefs_udp_sgmii"],
        "ADDITIONAL_LIBS": ["//designs/asap7/liteeth:sram_libs_udp_sgmii"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_ASAP7_CELLS",
        "CORE_UTILIZATION": "40",
        "PLACE_DENSITY": "0.3",
        "MACRO_PLACE_HALO": "5 5",
    },
)
