load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "liteeth_mac_wb_mii",
    platform = "nangate45",
    verilog_files = ["//designs/src/liteeth:liteeth_mac_wb_mii_rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": ["//designs/nangate45/liteeth:sram_lefs_mac"],
        "ADDITIONAL_LIBS": ["//designs/nangate45/liteeth:sram_libs_mac"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_NANGATE45_CELLS",
        "DIE_AREA": "0 0 680 680",
        "CORE_AREA": "15 15 665 665",
        "PLACE_DENSITY": "0.35",
        "CELL_PAD_IN_SITES_GLOBAL_PLACEMENT": "4",
        "CELL_PAD_IN_SITES_DETAIL_PLACEMENT": "4",
        "MACRO_PLACE_HALO": "30 30",
        "ROUTING_LAYER_ADJUSTMENT": "0.2",
    },
)
