load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "liteeth_mac_wb_mii",
    platform = "sky130hd",
    verilog_files = ["//designs/src/liteeth:liteeth_mac_wb_mii_rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": ["//designs/sky130hd/liteeth:sram_lefs_mac"],
        "ADDITIONAL_LIBS": ["//designs/sky130hd/liteeth:sram_libs_mac"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_SKY130HD_CELLS",
        "CORE_UTILIZATION": "40",
        "PLACE_DENSITY": "0.15",
        "MACRO_PLACE_HALO": "20 20",
        "ROUTING_LAYER_ADJUSTMENT": "0.2",
    },
)
