load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "liteeth_udp_raw_rgmii",
    platform = "sky130hd",
    verilog_files = ["//designs/src/liteeth:liteeth_udp_raw_rgmii_rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": ["//designs/sky130hd/liteeth:sram_lefs_udp_rgmii"],
        "ADDITIONAL_LIBS": ["//designs/sky130hd/liteeth:sram_libs_udp_rgmii"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_SKY130HD_CELLS",
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "55",
        "PLACE_DENSITY": "0.7",
        "ROUTING_LAYER_ADJUSTMENT": "0.2",
    },
)
